@@ -70,6 +70,14 @@ public interface ExerciseRepository extends JpaRepository<Exercise, Long> {
             """)
     Set<Exercise> findAllExercisesWithCurrentOrUpcomingReleaseDate(@Param("now") ZonedDateTime now);
 
+    @Query("""
+            SELECT e FROM Exercise e
+            WHERE e.course.testCourse = FALSE
+            	AND e.assessmentDueDate >= :#{#now}
+            ORDER BY e.dueDate ASC
+            """)
+    Set<Exercise> findAllExercisesWithCurrentOrUpcomingAssessmentDueDate(@Param("now") ZonedDateTime now);
+
     /**
      * Select Exercise for Course ID WHERE there does exist an LtiOutcomeUrl for the current user (-> user has started exercise once using LTI)
      * @param courseId the id of the course
@@ -87,28 +95,28 @@ public interface ExerciseRepository extends JpaRepository<Exercise, Long> {
     Set<Exercise> findByCourseIdWhereLtiOutcomeUrlExists(@Param("courseId") Long courseId, @Param("login") String login);
 
     @Query("""
-            SELECT DISTINCT c FROM Exercise e JOIN e.categories c
-            WHERE e.course.id = :#{#courseId}
-                """)
+             SELECT DISTINCT c FROM Exercise e JOIN e.categories c
+             WHERE e.course.id = :#{#courseId}
+            """)
     Set<String> findAllCategoryNames(@Param("courseId") Long courseId);
 
     @Query("""
-            SELECT DISTINCT e FROM Exercise e
-            LEFT JOIN FETCH e.studentParticipations
-            WHERE e.id = :#{#exerciseId}
-                """)
+             SELECT DISTINCT e FROM Exercise e
+             LEFT JOIN FETCH e.studentParticipations
+             WHERE e.id = :#{#exerciseId}
+            """)
     Optional<Exercise> findByIdWithEagerParticipations(@Param("exerciseId") Long exerciseId);
 
     @EntityGraph(type = LOAD, attributePaths = { "categories", "teamAssignmentConfig" })
     Optional<Exercise> findWithEagerCategoriesAndTeamAssignmentConfigById(Long exerciseId);
 
     @Query("""
-            SELECT DISTINCT e from Exercise e
-            LEFT JOIN FETCH e.exampleSubmissions examplesub
-            LEFT JOIN FETCH examplesub.submission exsub
-            LEFT JOIN FETCH exsub.results
-            WHERE e.id = :#{#exerciseId}
-                """)
+             SELECT DISTINCT e from Exercise e
+             LEFT JOIN FETCH e.exampleSubmissions examplesub
+             LEFT JOIN FETCH examplesub.submission exsub
+             LEFT JOIN FETCH exsub.results
+             WHERE e.id = :#{#exerciseId}
+            """)
     Optional<Exercise> findByIdWithEagerExampleSubmissions(@Param("exerciseId") Long exerciseId);
 
     @Query("""
@@ -432,7 +440,7 @@ public interface ExerciseRepository extends JpaRepository<Exercise, Long> {
      * calculates the average score and the participation rate of students for each given course exercise (team or individual)
      * by using the last result (rated or not)
      *
-     * @param exerciseIds              - list of exercise ids (must be belong to the same course)
+     * @param exerciseIds              - list of exercise ids (must belong to the same course)
      * @param useParticipantScoreTable use the participant score table instead of going through participation -> submission -> result
      * @return the list of {@link CourseExerciseStatisticsDTO}
      * @throws IllegalArgumentException if exercise is not found in database, exercise is not a course exercise or not all exercises are from the same course
@@ -453,7 +461,7 @@ public interface ExerciseRepository extends JpaRepository<Exercise, Long> {
             exercisesFromDb.add(exerciseFromDb);
         }
 
-        List<Long> uniqueCourseIds = exercisesFromDb.stream().map(exercise -> exercise.getCourseViaExerciseGroupOrCourseMember().getId()).distinct().collect(Collectors.toList());
+        List<Long> uniqueCourseIds = exercisesFromDb.stream().map(exercise -> exercise.getCourseViaExerciseGroupOrCourseMember().getId()).distinct().toList();
         if (uniqueCourseIds.size() > 1) {
             throw new IllegalArgumentException("Not all exercises are from the same course");
         }
@@ -514,8 +522,8 @@ public interface ExerciseRepository extends JpaRepository<Exercise, Long> {
      * @return Map which maps from exercise id to statistic query row data
      */
     private Map<Long, Object[]> getRawStatisticQueryData(List<Exercise> exercisesFromDb, boolean useParticipantScoreTable) {
-        List<Exercise> individualExercises = exercisesFromDb.stream().filter(exercise -> exercise.getMode().equals(ExerciseMode.INDIVIDUAL)).collect(Collectors.toList());
-        List<Exercise> teamExercises = exercisesFromDb.stream().filter(exercise -> exercise.getMode().equals(ExerciseMode.TEAM)).collect(Collectors.toList());
+        List<Exercise> individualExercises = exercisesFromDb.stream().filter(exercise -> exercise.getMode().equals(ExerciseMode.INDIVIDUAL)).toList();
+        List<Exercise> teamExercises = exercisesFromDb.stream().filter(exercise -> exercise.getMode().equals(ExerciseMode.TEAM)).toList();
 
         List<Object[]> statisticForIndividualExercises;
         List<Object[]> statisticTeamExercises;
